# C-_Kafka_Practice

./: CMakeLists.txt  ConsumeCb.cpp  ConsumeCb.h  DeliveryReportCb.cpp  DeliveryReportCb.h  Helper.cpp  Helper.h  KafkaConsumer.cpp  KafkaConsumer.h  KafkaProducer.cpp  KafkaProducer.h  Readme.txt  ThreadPool.cpp  ThreadPool.h  conanfile.py  main.cpp
app_kafka_library/src/: CMakeLists.txt  conanfile.py
app_kafka_library/src/kafka/: ConsumeCb.cpp  ConsumeCb.h  DeliveryReportCb.cpp  DeliveryReportCb.h  Helper.cpp  Helper.h  KafkaConsumer.cpp  KafkaConsumer.h  KafkaProducer.cpp  KafkaProducer.h
app_utils/src/: CMakeLists.txt  conanfile.py
app_utils/src/utils/: ThreadPool.cpp  ThreadPool.h
